# adventofcode

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  download-inputs.sh  index.html  mix.exs
.github/workflows/: deploy.yml  rust.yml  tests.yml
2017/: README.md
2017/_build/dev/lib/day1/: .compile.elixir
2017/_build/dev/lib/hextille/: .compile.elixir
2017/lib/: day1.ex  day2.ex  day4.ex  day9.ex
2017/test/: day4_test.exs  day5_test.exs  day6_test.exs  day9_test.exs
2018/day01/: Cargo.toml
2018/day01/src/: main.rs
aoc-cli/: Cargo.toml
aoc-cli/src/: main.rs
aoc-solver/: Cargo.toml
aoc-solver/benches/: benchmark.rs
aoc-solver/src/: lib.rs  solution.rs
aoc-solver/src/y2020/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
aoc-solver/src/y2021/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day21.rs  day22.rs  mod.rs
aoc-solver/src/y2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
aoc-solver/src/y2023/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
aoc-web/: Cargo.toml  index.html
aoc-web/src/: footer.rs  header.rs  home.rs  lib.rs  main.rs  navlink.rs  router.rs  runner.rs  solution.rs  syntax.rs  year.rs
aoc-web/src/y2021/: mod.rs
aoc-web/src/y2022/: cube.rs  lava.rs  mod.rs  rope.rs
aoc-web/src/y2023/: mod.rs
aoc-web/static/: fragment.glsl  styles.css
aoc-web/static/syntax/: LICENSE.txt
benches/: benchmark.rs
day01/: Cargo.toml
day01/src/: main.rs
day02/: Cargo.toml
day02/src/: main.rs
day03/: Cargo.toml
day03/src/: main.rs
day04/: Cargo.toml
day04/src/: main.rs
day04/test/: example.txt
day05/: Cargo.toml
day05/src/: main.rs
day06/: Cargo.toml
day06/src/: main.rs
day07/: Cargo.toml
day07/src/: main.rs
day08/: Cargo.toml
day08/src/: main.rs
day09/: Cargo.toml
day09/src/: main.rs
day10/: Cargo.toml
day10/src/: main.rs
day11/: Cargo.toml
day11/src/: main.rs
day12/: Cargo.toml
day12/src/: main.rs
day13/: Cargo.toml
day13/src/: main.rs
day14/: Cargo.toml
day14/src/: main.rs
day15/: Cargo.toml
day15/src/: main.rs
day16/: Cargo.toml
day16/src/: main.rs
day17/: Cargo.toml
day17/src/: main.rs
day19/src/: main.rs
day21/: Cargo.toml
day21/src/: main.rs
day22/: Cargo.toml
day22/src/: main.rs
lib/: Cargo.toml  day1.ex  day10.ex  day11.ex  day2.ex  day3.ex  day4.ex  day5.ex  day6.ex  day7.ex  day8.ex  day9.ex
src/: lib.rs  solution.rs  utils.rs  web.rs
src/solution/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day24.rs
src/web/: cube.rs  lava.rs  rope.rs
src/y2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
src/y2023/: day01.rs  mod.rs
static/: styles.css
test/: day10_test.exs  day11_test.exs  day1_test.exs  day2_test.exs  day3_test.exs  day4_test.exs  day5_test.exs  day7_test.exs  day8_test.exs  day9_test.exs
(+52 files in other folders)
