[workspace]
members = ["aoc-cli", "aoc-solver", "aoc-web"]
default-members = ["aoc-cli"]
resolver = "2"

[profile.release]
# https://yew.rs/docs/advanced-topics/optimizations#cargotoml
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
