[package]
name = "aoc-cli"
version = "0.1.0"
edition = "2021"
authors = ["Jaakko Husso <jaakko.t.husso@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.4"
clap = { version = "3.2.8", features = ["derive"] }
aoc-solver = { path = "../aoc-solver" }
