[package]
name = "aoc-cli"
version = "0.1.0"
edition = "2021"
authors = ["Jaakko Husso <jaakko.t.husso@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
clap = { version = "4.4.8", features = ["derive"] }
aoc-solver = { path = "../aoc-solver" }
