[package]
name = "aoc-solver"
version = "0.1.0"
edition = "2021"
authors = ["Jaakko Husso <jaakko.t.husso@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
nom = "7.1.1"
serde_scan = "0.4.1"
log = "0.4.17"
num = "0.4.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false
