[package]
name = "aoc-solver"
version = "0.1.0"
edition = "2021"
authors = ["Jaakko Husso <jaakko.t.husso@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
nom = "7.1.3"
serde_scan = "0.4.1"
log = "0.4.20"
num = "0.4.1"
cached = { version = "0.46.1", features = ["wasm"] }
regex = "1.10.2"
num-bigint = "0.4"
num-traits = "0.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
