[package]
name = "aoc-web"
version = "0.1.0"
authors = ["Jaakko Husso <jaakko.t.husso@gmail.com>"]
edition = "2021"

[dependencies]
itertools = "0.12.0"
log = "0.4.20"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.88"
web-sys = "0.3.65"
aoc-solver = { path = "../aoc-solver" }
gloo = "0.10.0"
syntect = { version = "5.1.0", default-features = false, features = [
    "default-fancy",
] }
